--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,50 @@
 {
   "extends": [
-    "github>snapserv/renovate-config:docker"
+    "config:base",
+    "default:disableRateLimiting",
+    "default:automergeDigest",
+    "default:automergeMinor",
+    "docker:enableMajor",
+    "docker:pinDigests"
+  ],
+  "packageRules": [
+    {
+      "paths": ["+(docker-compose.yml)"],
+      "pinDigests": false
+    },
+    {
+      "datasources": ["docker"],
+      "packagePatterns": ["^snapserv/"],
+      "ignoreUnstable": false,
+      "versioning": "semver"
+    },
+    {
+      "datasources": ["docker", "repology"],
+      "packageNames": ["alpine", "snapserv/alpine"],
+      "packagePatterns": ["^alpine(?:_[^/]+)?/"],
+      "managerBranchPrefix": "docker-",
+      "separateMajorMinor": false,
+      "groupName": "alpine packages",
+      "groupSlug": "alpine"
+    }
+  ],
+  "regexManagers": [
+    {
+      "fileMatch": ["(^|/)Dockerfile$"],
+      "matchStrings": [
+        "#\\s*renovate:\\s*datasource=repology depName=(?<lookupName>[^/]+/(?<depName>.*?))\\s+ENV .*?_VERSION=\"?(?<currentValue>.*?)\"?\\s"
+      ],
+      "depNameTemplate": "alpine/{{{depName}}}",
+      "lookupNameTemplate": "{{{replace \"alpine/\" \"alpine_3_12/\" lookupName }}}",
+      "datasourceTemplate": "repology",
+      "versioningTemplate": "loose"
+    },
+    {
+      "fileMatch": ["(^|/)Dockerfile$"],
+      "matchStrings": [
+        "#\\s*renovate:\\s*datasource=(?<datasource>(?:[^r]|r[^e]|re[^p]|rep[^o]|repo[^l]|repol[^o]|repolo[^g]|repolog[^y]|repology.).*?) depName=(?<depName>.*?)( versioning=(?<versioning>.*?))?\\s+ENV .*?_VERSION=\"?(?<currentValue>.*?)\"?\\s"
+      ],
+      "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}semver{{/if}}"
+    }
   ]
 }
